alignment isssue fixed

--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,15 @@
 
 .contactDiv {
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
 .todoListDiv {
     padding: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #myButton:hover {
